Colaboratory를 통해 생성됨

--- a/ml03_regression.ipynb
+++ b/ml03_regression.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNebn7hvhF9aS6bzgWJi3aR",
+      "authorship_tag": "ABX9TyMpRFzAlWds4iEjhaIrkW88",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -131,7 +131,7 @@
           "height": 206
         },
         "id": "69mVFv-xYmTZ",
-        "outputId": "8be4c8b8-69a9-4e81-fceb-db10fe7bc417"
+        "outputId": "b12e78de-9d48-4005-d72b-8ae9d7df3dfa"
       },
       "execution_count": 4,
       "outputs": [
@@ -148,7 +148,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-497f68a8-c191-4e36-a69a-2687e5e9674a\">\n",
+              "  <div id=\"df-fe7a1237-1062-4c32-83ac-781922b8087e\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -225,7 +225,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-497f68a8-c191-4e36-a69a-2687e5e9674a')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fe7a1237-1062-4c32-83ac-781922b8087e')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -276,12 +276,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-497f68a8-c191-4e36-a69a-2687e5e9674a button.colab-df-convert');\n",
+              "          document.querySelector('#df-fe7a1237-1062-4c32-83ac-781922b8087e button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-497f68a8-c191-4e36-a69a-2687e5e9674a');\n",
+              "          const element = document.querySelector('#df-fe7a1237-1062-4c32-83ac-781922b8087e');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -318,7 +318,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AdYmfkuFYpDJ",
-        "outputId": "779ccf43-a285-4117-be24-68dc409dc111"
+        "outputId": "b6a05331-fd4a-46b7-ad5e-b2116bac62f9"
       },
       "execution_count": 5,
       "outputs": [
@@ -362,9 +362,9 @@
           "height": 206
         },
         "id": "hqhnea4fZ2BS",
-        "outputId": "66d0395e-169f-46a0-8564-211628f4d786"
+        "outputId": "ec82dc65-35ff-4be0-a9b8-f206cfcbad7a"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -379,7 +379,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-c1c9f26a-4353-4b2d-a38b-56bc8b54ac3a\">\n",
+              "  <div id=\"df-36576129-0fcc-4001-ae0d-c1ef36bb7a01\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -456,7 +456,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c1c9f26a-4353-4b2d-a38b-56bc8b54ac3a')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-36576129-0fcc-4001-ae0d-c1ef36bb7a01')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -507,12 +507,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-c1c9f26a-4353-4b2d-a38b-56bc8b54ac3a button.colab-df-convert');\n",
+              "          document.querySelector('#df-36576129-0fcc-4001-ae0d-c1ef36bb7a01 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-c1c9f26a-4353-4b2d-a38b-56bc8b54ac3a');\n",
+              "          const element = document.querySelector('#df-36576129-0fcc-4001-ae0d-c1ef36bb7a01');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -535,7 +535,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 6
         }
       ]
     },
@@ -549,7 +549,7 @@
       "metadata": {
         "id": "6CuefvftY0z5"
       },
-      "execution_count": 13,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -562,9 +562,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CFDtH_m9a6S7",
-        "outputId": "28aec3db-5e71-44b3-a60b-447f49273dfc"
+        "outputId": "56d6573f-3414-4671-e2bd-c6e3392d1eda"
       },
-      "execution_count": 14,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -574,7 +574,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 8
         }
       ]
     },
@@ -597,7 +597,7 @@
       "metadata": {
         "id": "NPjcQKLHa9cZ"
       },
-      "execution_count": 15,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -610,9 +610,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oM5FuyemcQCr",
-        "outputId": "99081b1d-b0bb-4e66-bb9f-688357c7833c"
+        "outputId": "a86651ba-f106-4ac7-d7f7-38870b4dbecd"
       },
-      "execution_count": 16,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -622,7 +622,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 10
         }
       ]
     },
@@ -645,9 +645,9 @@
           "height": 279
         },
         "id": "Kf1El06tcWWC",
-        "outputId": "d35bb091-8bcf-47a6-c2f1-2b260e5b5d31"
+        "outputId": "dafc497e-5044-4872-a3a3-fe3f19ed8efb"
       },
-      "execution_count": 19,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -686,7 +686,7 @@
       "metadata": {
         "id": "qMWhPxhHeqrr"
       },
-      "execution_count": 20,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -699,9 +699,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gNAkTnpSfFy7",
-        "outputId": "f2a6d772-a546-4f07-b1c7-d8df76af9e48"
+        "outputId": "a7c01dd1-301c-4c60-88a3-489d225e8726"
       },
-      "execution_count": 21,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -711,7 +711,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 13
         }
       ]
     },
@@ -726,9 +726,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qggoMtRnfNpq",
-        "outputId": "40c9596d-82aa-4cc2-e3cc-0a25644763ef"
+        "outputId": "8229d8b0-8564-4375-811d-7366ef94c92a"
       },
-      "execution_count": 22,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -753,9 +753,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3BkQNp8jfd7j",
-        "outputId": "390e3517-41fb-42c9-830a-3795bd56e782"
+        "outputId": "34da23d0-b29d-4eeb-e8d0-2f73c9110866"
       },
-      "execution_count": 23,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -790,9 +790,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qxepC59ffm-L",
-        "outputId": "0e4611d5-b2e2-48ce-ba81-a573a898c711"
+        "outputId": "d41ea0c8-5dca-4edf-fe01-cb9f7f9093aa"
       },
-      "execution_count": 28,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -813,9 +813,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5F17EEmcmX7t",
-        "outputId": "1da70031-fef8-46f0-9408-24a1c47515b8"
+        "outputId": "1816eac3-fd9e-4cba-90d4-6d42790c8f6e"
       },
-      "execution_count": 31,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -825,7 +825,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 17
         }
       ]
     },
@@ -841,9 +841,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1H90ZpugnEnt",
-        "outputId": "0c928e9d-2f28-4a58-d29a-7c349518793a"
+        "outputId": "8853ea24-7ebc-4795-b5a1-dbfbb7d4be2e"
       },
-      "execution_count": 32,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -865,9 +865,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "n7uLlqevnmqr",
-        "outputId": "a2b3b0cb-f0db-4287-90a9-7c2acda3a024"
+        "outputId": "67f8242c-81c4-4600-d9e3-65125eba6da6"
       },
-      "execution_count": 33,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -949,9 +949,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZpRQxmg7nrjL",
-        "outputId": "bb224705-851c-4f18-8254-54a2b52ae48a"
+        "outputId": "1688dcc9-18a6-4875-e868-daa8d846c23f"
       },
-      "execution_count": 34,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -979,9 +979,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rkesnm14sTLU",
-        "outputId": "644575a9-7fc0-49f8-f3cb-b99916c9a92f"
+        "outputId": "192d69c8-9737-43d8-f65d-516667175459"
       },
-      "execution_count": 35,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -994,6 +994,67 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "knn_reg.score(X_tr, y_tr)  # 훈련 셋 점수 - KNN Regressor의 score 메서드는 결정계수를 리턴."
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_RFVnpSS-CRw",
+        "outputId": "836226bd-f838-4b2c-de0b-83b1a1232acf"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9698823289099254"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "knn_reg.score(X_te, y_te)  # 결정 계수(R2 score)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "upGeV26x-rgx",
+        "outputId": "ee8ca0fe-69a1-4ee4-cec5-ff3fedeaaf72"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.992809406101064"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "9QlhUJmw-vNG"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
