Colaboratory를 통해 생성됨

--- a/ml05_mnist.ipynb
+++ b/ml05_mnist.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOldgpGiFgzZnBeNn2aT3DF",
+      "authorship_tag": "ABX9TyOILQE48RAIWH7OMZCLRPVF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,12 +41,14 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "from sklearn import datasets"
+        "from sklearn import datasets\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "from sklearn.metrics import confusion_matrix"
       ],
       "metadata": {
         "id": "xA3rSHI3oCDY"
       },
-      "execution_count": 5,
+      "execution_count": 48,
       "outputs": []
     },
     {
@@ -774,9 +776,9 @@
           "height": 590
         },
         "id": "wMr4lMWN6o9E",
-        "outputId": "774097f2-a67f-41ce-e7b5-f8e05c3e13fc"
+        "outputId": "616e6652-6af1-424f-a193-e90271a1b4b6"
       },
-      "execution_count": 37,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "display_data",
@@ -791,6 +793,212 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Train(훈련)/Validation(검증)/Test(테스트) 분리"
+      ],
+      "metadata": {
+        "id": "383DxqCvCB26"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "* 훈련 셋(Train set): ML 모델을 훈련(학습).\n",
+        "* 검증 셋(Validation set): 훈련된 ML 모델의 일반화 성능을 테스트하기 위한 셋. 하이퍼 파라미터들을 튜닝하기 위한 목적으로 사용.\n",
+        "* 테스트 셋(Test set): 최종적으로 선택된 ML 모델의 일반화 성능을 예상하기 위해서 사용하는 셋. ML의 전 과정에서 오직 1번만 사용함.\n"
+      ],
+      "metadata": {
+        "id": "TmUw7y-mDAvT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 70,000개 전체 데이터를 훈련 셋 60,000개, 테스트 셋 10,000개로 나눔.\n",
+        "X_tr_big, X_te = X[:60_000], X[60_000:]\n",
+        "y_tr_big, y_te = y[:60_000], y[60_000:]"
+      ],
+      "metadata": {
+        "id": "Hl7V6Km-CHVg"
+      },
+      "execution_count": 44,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_tr_big.shape, y_tr_big.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "R3i-CIOuEl0i",
+        "outputId": "8b2ad9d3-8ad1-4b28-bef8-eacf5e829fff"
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((60000, 784), (60000,))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 60,000개 훈련 셋을 다시 훈련 셋 54,000개, 검증 셋 6,000개로 나눔.\n",
+        "X_tr, X_val = X_tr_big[:54_000], X_tr_big[54_000:]\n",
+        "y_tr, y_val = y_tr_big[:54_000], y_tr_big[54_000:]"
+      ],
+      "metadata": {
+        "id": "1-ejQsSyEpPn"
+      },
+      "execution_count": 46,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_tr.shape, y_tr.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wcmXCdEXF3aS",
+        "outputId": "2c2a8ba9-eda7-4aaa-f98d-3fb768f15c15"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((54000, 784), (54000,))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 47
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "* `train_test_split()` 함수를 사용해서 훈련/검증/테스트 셋 분리\n",
+        "* MNIST 데이터셋은 랜덤하게 섞여있기 때문에 순차추출을 이용할 수도 있음.\n"
+      ],
+      "metadata": {
+        "id": "nHYc5s1PGJt6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# KNN 모델 선택, 훈련, 평가"
+      ],
+      "metadata": {
+        "id": "Q3FBP2-ZGvzg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "knn = KNeighborsClassifier(n_jobs=-1)  # ML 모델 생성\n",
+        "# n_jobs: 동시 병렬 작업의 수. 기본값은 1개. -1은 CPU의 최대 성능을 모두 사용한다는 의미."
+      ],
+      "metadata": {
+        "id": "eJIniyATF55H"
+      },
+      "execution_count": 49,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "knn.fit(X_tr, y_tr)  # ML 모델 훈련"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "81SjIhWsIQzI",
+        "outputId": "2294f8a0-04ed-40d3-cea6-71ab4f26c11e"
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "KNeighborsClassifier(n_jobs=-1)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 50
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "knn.score(X_tr, y_tr)\n",
+        "# score: (1) predict(X_tr), (2) 예측값 == y_tr, (3) 정확도(accuracy)를 리턴."
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rIMp6ZRXIa2P",
+        "outputId": "6ec1f612-bcc6-45c1-d1ac-0fe3c8c05145"
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9811481481481481"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 51
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_tr_pred = knn.predict(X_tr)"
+      ],
+      "metadata": {
+        "id": "ayUGNbYFJ5Gx"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "confusion_matrix(y_tr, y_tr_pred)"
+      ],
+      "metadata": {
+        "id": "PkZYsCz2J9cI"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
